# RoboMaster

./: .gitignore  附件x.vsdx
Armor/: CMakeLists.txt  main.cpp
Configurator/: CMakeLists.txt
PadPass/: DigitRecognization.py  PadPass.py  PadPassCombine.py  PadPassCombine1.py  PadPassPad_new.py  PadPassPassCombine.py  PadPass_cnn.py  PadPass_new.py  PadPass_new1.py  PadPass_new_classifier.py  PadPass_new_classifier_test.py  PadPass_rnn.py  PadRecognization.py  PassRecognization.py  PlaneBlue.py  SliceLed.py  cameratest.py  digits_cls.pkl  digits_cls1.pkl  keras_mnist.py  kerasify.py  led.py  led_cls.pkl  led_digit.py  led_svm_classifier.py  led_svm_classifier_test.py  mnist_output.py  model.ckpt.index  model.h5  model.json  model.pb  model_handwrite copy.json  model_handwrite.json  model_handwrite.model  model_handwrite4.json  model_led.json  test1.py  wurenji.py  wurenji1.py  wurenji2.py  (+1 more)
PadPassCpp/: CMakeLists.txt  Structure.cpp  autogen_handwrite.sh  autogen_led.sh  keras_model.cc  main.cpp  protocol.c  protocol.h
Protocol/Mainfold/C/: CMakeLists.txt  SendQueue.h  protocol.cpp  protocol.h
Protocol/Mainfold/Python/: ProtocolTest.py  protocol.py  protocol_pb2.py
Protocol/Mainfold/SerialInterface/: CMakeLists.txt  Makefile  SendQueue.cpp  Serial.cpp  Serial.h  SerialInterface.cbp  SerialReceive.cpp  SerialReceive.h  SerialSendQueue.cpp  SerialSendQueue.h  UDPClient.h  UDPServer.cpp  UDPServer.h  main.cpp  protocol.cpp  protocol.h  protocol.pb-c.h
Protocol/Protobuf/: Protocol.cs  autogen.sh  protocol.pb.cc  protocol.pb.h  protocol.proto  protocol_pb2.py
Protocol/stm32-protocol/: CMakeLists.txt  DataType.h  main.c  protocol.c  protocol.h  protocol.pb-c.c  protocol.pb-c.h  protocol_config.h  protocol_sdk.c  protocol_sdk.h
QRCode/MainFold/: CMakeLists.txt  Serial.cpp  Serial.h  main.cpp  protocol.cpp  protocol.h  protocol.pb.cc  protocol.pb.h
QRCode/Protocol/: Protocol.cs  autogen.sh  protocol.pb-c.c  protocol.pb-c.h  protocol.pb.cc  protocol.pb.h  protocol.proto
QRCode/stm32/: CMakeLists.txt  protocol.c  protocol.h
QRCode/stm32-project/: CMakeLists.txt
QRCode/stm32-project/Lib/CMSIS/: stm32f10x_conf.h
QRCode/stm32-project/Lib/src/: stm32f10x_usart.c
QRCode/stm32-project/Lst/: 5IO Keypad.map  BootLoader.map  startup_stm32f10x_hd.lst
QRCode/stm32-project/MDK_Project/: 5IO Keypad.uvgui.wzq  5IO Keypad.uvopt  5IO Keypad.uvproj  JLinkLog.txt  watchdog.c
QRCode/stm32-project/User/: Main.c  User_systick.c  User_systick.h  protocol.c  protocol.h  protocol.pb-c.h  stm32f10x_it.c  systimer.c  systimer.h  usart.c  usart.h
QRCode/stm32-protocol/: CMakeLists.txt  main.c
SimulationScratchableLatex/: SimulationScratchableLatex.sln
SimulationScratchableLatex/SimulationScratchableLatex/: Form1.Designer.cs  Form1.cs  Form1.resx  HookTool.cs  Program.cs  SimulationScratchableLatex.csproj
SimulationScratchableLatex/SimulationScratchableLatex/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
Tarmac/: CMakeLists.txt  detection.cpp  main.cpp  protocol.c  protocol.cpp  protocol.h  protocol.pb-c.c
UltraSonic/: CMakeLists.txt  UDPClient.cpp  main.cpp  protocol.c  protocol.h
VideoCapture/: CMakeLists.txt  DataType.h  ReceiveHandler.cpp  ReceiveHandler.h  Structure.cpp  Structure.h  UDPClient.h  UDPServer.cpp  UDPServer.h  VideoRecord.cpp  VideoRecord.h  VideoRecorder.cpp  VideoRecorder.h  avilib.c  avilib.h  main.cpp  out.avi  protocol.c  protocol.h  protocol.pb-c.c  v4l2uvc.c  v4l2uvc.h
VideoService/Client/: Structure.cpp  Structure.h  main.cpp
VideoService/Server/: CMakeLists.txt  Structure.cpp  Structure.h  main.cpp
WZQ/DigitalImageProcessing/: DigitRecognization1.py  demo.py  template_generate.py
WZQ/DigitalImageProcessing/Project2/: DigitRecognization1.py  DigitRecognization2.py  PadRecognization.py  PasswordRecognization.py  PasswordRecognizationNeural.py  model_pass.h5  model_pass.json  sliceimage.py
WZQ/NeuralNetwork/: digit_recognition.py
WZQ/NeuralNetwork/preprocess/: Untitled.ipynb  rotate.py
WZQ/NeuralNetwork/preprocess/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
